--- a/kadai_tutorial_output/style.css
+++ b/kadai_tutorial_output/style.css
@@ -318,7 +318,7 @@ h3 {
 }
 
 .cell-first {
-  border-top-color: ececec;
+  border-top-color: #ececec;
   border-top-width: 1px;
   border-top-style: solid;
 }
